# moonraker-client

./: .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  configuration.md  contributing.md  getting-started.md  index.md
docs/advanced/: async-usage.md  authentication.md  error-handling.md  websocket.md
docs/examples/: cli-status.py  monitor-print.py
docs/usage/: file-management.md  job-queue.md  monitoring.md  printer-control.md  system-admin.md  temperature-management.md
openapi/: README.md  index.html  openapi.yaml
openapi/scripts/: generate_openapi.py  generator.py  models.py  parser.py  type_mapping.py
openapi/tests/: conftest.py  pytest.ini  test_01_spec_validation.py  test_02_basic_reads.py  test_03_file_management.py  test_04_print_lifecycle.py  test_05_state_queries.py  test_06_schemathesis.py  test_08_error_responses.py  test_09_extended_reads.py  test_10_file_operations.py  test_11_webcam_crud.py  test_12_history_ops.py  test_13_database_advanced.py  test_14_auth_lifecycle.py  test_15_websocket_notifications.py  test_16_parameter_validation.py  test_17_recoverable_ops.py  test_18_content_negotiation.py
openapi/tests/assets/: test_print.gcode
src/moonraker_client/: __init__.py  _base.py  _jsonrpc.py  _transport.py  auth.py  client.py  exceptions.py  helpers.py
src/moonraker_client/api/: __init__.py  announcements.py  auth.py  database.py  devices.py  extensions.py  files.py  history.py  integrations.py  jobs.py  machine.py  notifications.py  printer.py  server.py  updates.py  webcams.py
src/moonraker_client/models/: __init__.py  common.py  generated.py
tests/: conftest.py
tests/functional/: conftest.py  test_files.py  test_helpers.py  test_machine.py  test_printer.py  test_server.py  test_websocket.py
tests/unit/: test_auth.py  test_client.py  test_helpers.py  test_jsonrpc.py  test_models.py  test_transport.py
tests/unit/api/: test_auth_api.py  test_files.py  test_history.py  test_jobs.py  test_machine.py  test_printer.py  test_server.py
tools/: generate.py  regenerate_openapi.sh
