[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moonraker-client"
version = "0.1.0"
description = "Python client library for the Moonraker API"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Christopher Byrd" },
]
keywords = ["moonraker", "klipper", "3d-printing", "api-client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/cbyrd01/moonraker-client"
Repository = "https://github.com/cbyrd01/moonraker-client"
Issues = "https://github.com/cbyrd01/moonraker-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/moonraker_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "functional: tests that require a live Moonraker server",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/moonraker_client/api/*.py" = ["E501"]  # Generated docstrings may be long
"src/moonraker_client/models/generated.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "moonraker_client.api.*"
disable_error_code = ["attr-defined", "index", "dict-item", "no-redef"]

[[tool.mypy.overrides]]
module = "moonraker_client.models.generated"
disable_error_code = ["attr-defined"]
